fix(table): fix overflow

--- a/src/typography/Table/Table.css
+++ b/src/typography/Table/Table.css
@@ -1,4 +1,11 @@
 .stand--Table {
+  width: 100%;
+  max-width: 100%;
   margin-bottom: var(--space-m);
   border: 1px solid var(--color-bg-border);
+
+  @media screen and (max-width: 899px) {
+    display: block;
+    overflow: auto;
+  }
 }
